Set power line frequency in video capture service

After video capture service is enabled by default, timezone settings
is not applied to video capture service. It causes camera anti-banding
setting is wrong.

BUG=920094,b:121302062
TEST=open camera to see anti-banding setting is correct

Change-Id: I21f8e50c641ac46e75bde7d4cb514091aa03a9e1
Reviewed-on: https://chromium-review.googlesource.com/c/1420459
Reviewed-by: Ricky Liang <jcliang@chromium.org>
Reviewed-by: Christian Fremerey <chfremer@chromium.org>
Commit-Queue: Christian Fremerey <chfremer@chromium.org>
Cr-Commit-Position: refs/heads/master@{#624320}